--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,20 @@
 	</organization>
 	<packaging>war</packaging>
 	<version>1.0.0.BUILD-SNAPSHOT</version>
+	<profiles>
+           <profile>
+               <id>sonar</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+			<!-- Optional URL to server. Default value is http://localhost:9000 -->
+				<sonar.host.url>
+					http://40.121.44.224:9000
+				</sonar.host.url>
+			</properties>
+		</profile>
+	</profiles>
 	<properties>
 		<java-version>1.6</java-version>
 		<org.springframework-version>3.1.2.RELEASE</org.springframework-version>
